➕ increase base font size to 16px to stop zoom (esp. on iOS devices)

--- a/src/components/AppSkeleton/style.css
+++ b/src/components/AppSkeleton/style.css
@@ -12,6 +12,10 @@ html, body {
   padding: 0;
 }
 
+body {
+  font-size: 1.6rem;
+}
+
 .appContainer {
   width: 100vw;
   height: 100vh;
